# rssdsim

./: .gitignore  Cargo.toml  QUICKSTART.md  README.md
docs/: ADVANCED_FEATURES_V2.md  API.md  ARCHITECTURE.md  ARCHITECTURE_DIAGRAMS.txt  EXAMPLES.md  EXPLORATION_SUMMARY.txt  FEATURES_SUMMARY.md  FORMAT_SUPPORT.md  IMPLEMENTATION_REPORT.md  IMPLEMENTATION_SUMMARY.md  MONTE_CARLO_AND_INTEGRATORS.md  NEW_FEATURES.md  PHASE3_SUMMARY.md  PROTOCOLS.md  README.md  TUTORIAL.md  implementation_summary.md  rssdsim_code_snippets.md  rssdsim_codebase_analysis.md
examples/: TNV_HighParticipation.xmile  TNV_Simulation_Ready.xmile  advanced_features.yaml  bank_account.json  exponential_growth.yaml  sir_epidemic.yaml  test_new_features.sh
examples/insightmaker/: simple_growth.json  sir_epidemic.json
examples/xmile/: simple_growth.xmile  sir_epidemic.xmile
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.vue
frontend/src/components/: MetricsPanel.vue  ModelDiagram.vue  PropertiesPanel.vue  SimulationControls.vue  TimeSeriesChart.vue
frontend/src/services/: api.ts  websocket.ts
frontend/src/stores/: model.ts
frontend/src/types/: index.ts
frontend/src/views/: DashboardView.vue
src/: main.rs
src/analysis/: mod.rs  monte_carlo.rs  optimization.rs  parallel.rs  sensitivity.rs  stability.rs  structure.rs
src/io/: hdf5_writer.rs  insightmaker.rs  mod.rs  netcdf_writer.rs  parser.rs  writer.rs  xmile.rs
src/model/: auxiliary.rs  dimension.rs  expression.rs  flow.rs  mod.rs  parameter.rs  stock.rs  units.rs
src/protocol/: a2a.rs  mcp.rs  mod.rs
src/server/: app.rs  error.rs  mod.rs  state.rs  types.rs  websocket.rs
src/server/routes/: mod.rs  models.rs  simulations.rs
src/simulation/: abm.rs  agent_sd_bridge.rs  arrayvalue.rs  delay.rs  engine.rs  integrator.rs  lookup.rs  mod.rs  noise.rs  stochastic.rs
src/visualization/: graph.rs  layout.rs  mod.rs
